[gd_scene load_steps=2 format=3 uid="uid://747uiig7qjkh"]

[ext_resource type="Script" path="res://scripts/inventory/inventory.gd" id="1_tptya"]

[node name="Inventory" type="Node"]
script = ExtResource("1_tptya")

[node name="InventoryMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="PanelContainer" type="PanelContainer" parent="InventoryMenu"]
custom_minimum_size = Vector2(300, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="InventoryMenu/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InventoryMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="InventoryMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Items"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="InventoryMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "x"

[node name="ItemsFlowContainer" type="HFlowContainer" parent="InventoryMenu/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="InventoryMenu/PanelContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
